--- a/login.html
+++ b/login.html
@@ -9,10 +9,22 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <style>
+            h1 {
+                text-align: center;
+                font-size: 2.5rem;
+            }
+            p {
+                text-align: center;
+            }
+            div.form-group {
+                margin: 30px 0;
+            }
+        </style>
     </head>
     <body>
-        <h1>PromptPal</h1>
-        <form action="/login" method="POST">
+        <h1 class="my-5">PromptPal</h1>
+        <form action="/login" method="POST" class="w-50 my-3 mx-auto">
             <div class="form-group">
                 <label for="form__username">Username</label>
                 <input id="form__username" type="text" class="form-control" />
@@ -25,10 +37,17 @@
                     class="form-control"
                 />
             </div>
+            <div class="form-group" style="text-align: center">
+                <input
+                    class="btn btn-primary w-100"
+                    type="submit"
+                    value="Log In"
+                />
+            </div>
         </form>
-        <span>
+        <p>
             Don't have an account yet? |
             <a href="#">Create an account</a>
-        </span>
+        </p>
     </body>
 </html>
