Corrected login page for consistency

--- a/login.html
+++ b/login.html
@@ -23,8 +23,8 @@
         </style>
     </head>
     <body>
-        <h1 class="my-5">PromptPal</h1>
-        <form action="/login" method="POST" class="w-50 my-3 mx-auto">
+        <h1 class="my-3">PromptPal</h1>
+        <form action="/login" method="POST" class="w-50 mx-auto">
             <div class="form-group">
                 <label for="form__username">Username</label>
                 <input id="form__username" type="text" class="form-control" />
@@ -47,7 +47,7 @@
         </form>
         <p>
             Don't have an account yet? |
-            <a href="#">Create an account</a>
+            <a href="/signup.html">Create an account</a>
         </p>
     </body>
 </html>
