Login and signup redesign

--- a/login.html
+++ b/login.html
@@ -18,11 +18,14 @@
                 text-align: center;
             }
             div.form-group {
-                margin: 30px 0;
+                margin: 20px 0;
             }
         </style>
     </head>
-    <body>
+    <body class="bg-light">
+        <header class="bg-white border-bottom border-dark p-3">
+            <span style="font-weight: bold">Log In</span>
+        </header>
         <h1 class="my-3">PromptPal</h1>
         <form action="/login" method="POST" class="w-50 mx-auto">
             <div class="form-group">
