--- a/signup.html
+++ b/signup.html
@@ -18,13 +18,16 @@
                 text-align: center;
             }
             div.form-group {
-                margin: 30px 0;
+                margin: 20px 0;
             }
         </style>
     </head>
-    <body>
+    <body class="bg-light">
+        <header class="bg-white border-bottom border-dark p-3">
+            <span style="font-weight: bold">Sign Up</span>
+        </header>
         <h1 class="my-3">PromptPal</h1>
-        <form action="/login" method="POST" class="w-50 mx-auto">
+        <form action="/signup" method="POST" class="w-50 mx-auto">
             <div class="form-group">
                 <label for="form__fullname">Full name</label>
                 <input id="form__fullname" type="text" class="form-control" />
