--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,114 +9,188 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
         <style>
+            h1 {
+                font-weight: bold;
+                font-size: 1.25rem;
+                margin: 0;
+            }
+            h2 {
+                font-size: 1.25rem;
+                font-weight: bold;
+            }
+            h3 {
+                font-size: 1.25rem;
+            }
+            h4 {
+                font-size: 1rem;
+                font-weight: bold;
+                text-align: center;
+            }
             div.form-group {
                 margin: 30px 0;
+            }
+            .water {
+                margin: auto;
+                padding: 15px;
+                width: 75px;
+                height: 75px;
+                background-color: #8fb9f7;
+                border-radius: 10px;
+                background-image: url("/public/img/water.png");
+                background-repeat: no-repeat;
+                background-size: 75% 75%;
+                background-position: center center;
+            }
+            .stretch {
+                margin: auto;
+                padding: 15px;
+                width: 75px;
+                height: 75px;
+                background-color: #f79c8f;
+                border-radius: 10px;
+                background-image: url("/public/img/exercise.png");
+                background-repeat: no-repeat;
+                background-size: 75% 75%;
+                background-position: center center;
+            }
+            .ellipses {
+                margin: auto;
+                padding: 15px;
+                width: 75px;
+                height: 75px;
+                background-image: url("/public/img/three_ellipses.png");
+                background-repeat: no-repeat;
+                background-size: 75%;
+                background-position: center center;
+            }
+            div.chart_wrapper:after {
+                content: "";
+                display: block;
+                clear: both;
+            }
+            div.chart_container {
+                width: 47.5%;
+                background-color: white;
+                display: inline-block;
+                border-radius: 25px;
+                margin: 10px 5px;
+                padding: 25px 0;
+            }
+            div.reminder {
+                height: 125px;
+                border-radius: 25px;
+                overflow: hidden;
+                display: flex;
+                align-items: center;
+                width: 100%;
+                padding: 0 30px;
+                background-color: white;
+                margin-bottom: 10px;
+            }
+            div.reminder_column {
+                display: inline-block;
+                margin: 0;
+                padding: 0;
+                width: 25%;
+                text-align: center;
+            }
+            span.reminder_name {
+                font-weight: bold;
             }
         </style>
     </head>
     <body
+        class="bg-light"
         style="
             margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         "
     >
-        <div
-            id="modal_form"
-            style="
-                display: none;
-                background-color: rgba(0, 0, 0, 70%);
-                position: absolute;
-                width: 100vw;
-                height: 100vh;
-            "
-        >
-            <div
-                class="mx-auto w-50 bg-white my-5 p-3"
-                style="border-radius: 30px"
-            >
-                <form action="GET" method="#">
-                    <h2
-                        style="
-                            text-align: center;
-                            font-weight: bold;
-                            font-size: 1.5rem;
-                        "
-                    >
-                        Create reminder
-                    </h2>
-                    <div class="form-group">
-                        <label for="modal_form__reason">Reason</label>
-                        <input
-                            type="text"
-                            id="modal_form__reason"
-                            class="form-control"
-                        />
-                    </div>
-                    <div class="form-group">
-                        <label for="modal_form__time">Time</label>
-                        <input
-                            type="time"
-                            id="modal_form__time"
-                            class="form-control"
-                        />
-                    </div>
-                    <div class="form-group">
-                        <label for="modal_form__icon">Icon</label>
-                        <select
-                            name="Icon"
-                            id="modeal_form__icon"
-                            class="form-control"
-                        >
-                            <option value="water">Water</option>
-                            <option value="medication">Medication</option>
-                            <option value="snacks">Snacks</option>
-                            <option value="stretching">Stretching</option>
-                        </select>
-                    </div>
-                    <div class="form-group" style="text-align: center">
-                        <input
-                            id="modal_form__submit"
-                            type="submit"
-                            value="Create reminder"
-                            class="btn btn-primary"
-                        />
-                        <input
-                            id="modal_form__reset"
-                            type="reset"
-                            value="Cancel"
-                            class="btn btn-primary"
-                        />
-                    </div>
-                </form>
-            </div>
-        </div>
         <header class="bg-white border-bottom border-dark p-3">
-            <h1 class="m-0" style="font-weight: bold; font-size: 1.25rem">
-                PromptPal
-            </h1>
+            <h1>PromptPal</h1>
         </header>
-        <h2>Welcome back &gt;Username&lt;!</h2>
-        <h3>User statistics</h3>
-        <!-- Average happiness score pie chart -->
-        <!-- Monthly happiness score -->
-        <h3>Upcoming Reminders</h3>
-        <div id="reminders_wrapper">
-            <div>
-                <div><!-- <img /> --></div>
-                <span>Drink water</span>
-                <div>00:15:20</div>
-                <div><!-- actions --></div>
+        <div class="m-3">
+            <h2>Welcome back &lt;Username&gt;!</h2>
+            <h3>User statistics</h3>
+            <div class="chart_wrapper">
+                <div class="chart_container" style="float: left">
+                    <h4>Average happiness score</h4>
+                    <canvas
+                        id="average-happiness-score"
+                        style="width: 75%"
+                    ></canvas>
+                </div>
+                <div class="chart_container" style="float: right">
+                    <h4>Monthly happiness score</h4>
+                    <canvas
+                        id="monthly-happiness-score"
+                        style="width: 75%"
+                    ></canvas>
+                </div>
             </div>
-            <div>
-                <div><!-- <img /> --></div>
-                <div>Grab a snack</div>
-                <div>01:00:02</div>
-                <div><!-- actions --></div>
-            </div>
+            <h3 style="font-size: 1.25rem">Upcoming Reminders</h3>
+            <div id="reminders_wrapper"></div>
         </div>
         <script>
             const $ = document.querySelector.bind(document);
+            function HTMLtoNode(html) {
+                const template = document.createElement("template");
+                template.innerHTML = html;
+                return template.content.children[0];
+            }
+            function addTask(node, name, time, type) {
+                node.appendChild(
+                    HTMLtoNode(`<div class="reminder">
+                    <div class="reminder_column">
+                        <div class="${type}"></div>
+                    </div>
+                    <div class="reminder_column">
+                        <span class="reminder_name">${name}</span>
+                    </div>
+                    <div class="reminder_column">
+                        <span>${time}</span>
+                    </div>
+                    <div class="reminder_column">
+                        <div class="ellipses"></div>
+                    </div>
+                </div>`)
+                );
+            }
+            addTask(
+                $("#reminders_wrapper"),
+                "Drink water",
+                "00:15:20",
+                "water"
+            );
+            new Chart("average-happiness-score", {
+                type: "pie",
+                data: {
+                    labels: ["Happiness score", "Unhappiness score"],
+                    datasets: [
+                        {
+                            data: [70, 30],
+                            backgroundColor: ["lightblue"],
+                        },
+                    ],
+                },
+                options: { legend: { display: false } },
+            });
+            new Chart("monthly-happiness-score", {
+                type: "line",
+                data: {
+                    labels: ["December", "January"],
+                    datasets: [
+                        {
+                            data: [66, 68],
+                            backgroundColor: ["lightblue"],
+                            fill: false,
+                        },
+                    ],
+                },
+                options: { legend: { display: false } },
+            });
         </script>
     </body>
 </html>
