--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,15 @@
 </head>
 
 <body>
-  <h1>Push Notifications Using Node</h1>
 
+  <h1>Push Notifications Using Node</h1>
   <script src="client.js"></script>
+
+  <p id="countdown"></p>
+  <script src="counter.js"></script>
+
+  <!-- Display countdown from counter.js -->
+  
 </body>
 
 </html>
