--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,28 @@
 </head>
 
 <body>
+  <!---->
+  <div>
+    <p id="countdown"></p>
+    <script src="client.js"></script>
+    <script src="counter.js"></script>
+  </div>
 
+  <div class="stretch" id="ex-2">
+    <h1>POST CHAT</h1>
+    <p>
+      Click the button
+    </p>
+    <button id="generateResponseButton">Generate Response</button>
+    <div id="answer-box">
+      <p id="generated-answer">Response here!</p>
+      <script type="module" src="index.js"></script>
+    </div>
+  </div>
 
-
-  <p id="countdown"></p>
-  <script src="client.js"></script>
-  <script src="counter.js"></script>
   
+  
+
 
   <!-- Display countdown from counter.js -->
   
