--- a/public/html/index.html
+++ b/public/html/index.html
@@ -122,6 +122,7 @@
             <h1>PromptPal</h1>
         </header>
         <form
+            id="set_reminder_form"
             class="m-3"
             style="
                 float: right;
@@ -130,6 +131,8 @@
                 background-color: white;
                 border-radius: 20px;
             "
+            action="#"
+            method="GET"
         >
             <h2>Create a reminder</h2>
             <div class="form-group">
@@ -192,6 +195,7 @@
             </div>
             <div class="form-group">
                 <input
+                    id="set_reminder_button"
                     type="submit"
                     value="Set reminder!"
                     class="form-control bg-light"
@@ -278,6 +282,10 @@
                     ],
                 },
                 options: { legend: { display: false } },
+            });
+            $("#set_reminder_button").addEventListener("click", (e) => {
+                e.preventDefault();
+                // Do stuff
             });
         </script>
     </body>
