--- a/public/html/main_temp.html
+++ b/public/html/main_temp.html
@@ -394,14 +394,22 @@
 
                 <h3>Here are some suggestions</h3>
                 <div id="video-block">
-               
+                    <ul class="video-list">
+                        <li class="video-item">
+                            <h2>5 minute meditation</h2>
+                            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ssss7V1_eyA" frameborder="0" allowfullscreen></iframe>
+                        </li>
 
+                        <li class="video-item">
+                            <h2>5 minute workout</h2>
+                            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=tzIJfCMBBRs" frameborder="0" allowfullscreen></iframe>
+                        </li>
+                    </ul>
                 </div>
                 <br>
                 <h3>Additional instructions</h3>
                 <div id="instruction-block">
-
-
+                    <p>Sometimes the best solution is to rest, relax, and recharge. It's hard to be your best on empty. - Sam Glenn</p>
                 </div>
 
                 <br>
