--- a/public/html/index.html
+++ b/public/html/index.html
@@ -82,6 +82,7 @@
 
             .slider {
                 -webkit-appearance: none;
+                appearance: none;
                 width: 100%;
                 height: 10px;
                 border-radius: 25px;
@@ -509,7 +510,7 @@
             </div>
         </form>
         <div class="m-3" style="width: 65%">
-            <h2>Welcome back &lt;Username&gt;!</h2>
+            <h2>Welcome back!</h2>
             <h3>User statistics</h3>
             <div>
                 <div class="chart_container" style="float: left">
@@ -532,6 +533,7 @@
         </div>
 
         <script>
+            let reminderId = 0;
             const $ = document.querySelector.bind(document);
             function HTMLtoNode(html) {
                 const template = document.createElement("template");
@@ -540,7 +542,7 @@
             }
             function addTask(node, name, time, type) {
                 node.appendChild(
-                    HTMLtoNode(`<div class="reminder">
+                    HTMLtoNode(`<div class="reminder" id="reminder${reminderId}">
                     <div class="reminder_column">
                         <div class="${type}"></div>
                     </div>
@@ -551,10 +553,15 @@
                         <span>${time}</span>
                     </div>
                     <div class="reminder_column">
-                        <div class="ellipses"></div>
+                        <div class="ellipses" onclick="deleteTask('reminder${reminderId}');"></div>
                     </div>
                 </div>`)
                 );
+                reminderId++;
+            }
+            function deleteTask(nodeId) {
+                const element = document.getElementById(nodeId);
+                element.parentNode.removeChild(element);
             }
             addTask(
                 $("#reminders_wrapper"),
@@ -600,6 +607,12 @@
                 document.getElementById("form2").style.display = "none";
                 document.getElementById("form0").style.display = "block";
             });
+
+            function afterInterrupt() {
+                document.getElementById("form0").style.display = "none";
+                document.getElementById("form1").style.display = "block";
+            }
+            afterInterrupt();
 
             const reminderBtn = document.getElementById("reminderBtn");
             reminderBtn.addEventListener("click", (e) => {
