updated video links

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -388,12 +388,12 @@
                     <ul class="video-list">
                         <li class="video-item">
                             <h2>5 minute meditation</h2>
-                            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ssss7V1_eyA" frameborder="0" allowfullscreen></iframe>
+                            <a href="https://www.youtube.com/watch?v=ssss7V1_eyA" target="_blank">Watch Video</a>
                         </li>
 
                         <li class="video-item">
                             <h2>5 minute workout</h2>
-                            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=tzIJfCMBBRs" frameborder="0" allowfullscreen></iframe>
+                            <a href="https://www.youtube.com/watch?v=tzIJfCMBBRs" target="_blank">Watch Video</a>
                         </li>
                     </ul>
                 </div>
