--- a/public/html/main.html
+++ b/public/html/main.html
@@ -400,7 +400,8 @@
                 <br>
                 <h3>Additional instructions</h3>
                 <div id="instruction-block">
-                    <p>Sometimes the best solution is to rest, relax, and recharge. It's hard to be your best on empty. - Sam Glenn</p>
+                    <p id="generated-answer">Response here!</p>
+                    <script type="module" src="index.js"></script>
                 </div>
 
                 <br>
@@ -649,19 +650,8 @@ app.post("/subscribe", (req, res) => {
     // Create a unique ID for the countdown element
     const countdownId = 'countdown-' + Math.random().toString(36).substr(2, 9);
 
-    async function getActivities() {
-        console.log("Sending Push...");
-        await fetch("http://localhost:3000/db/userlist/", {
-            method: "POST",
-            body: JSON.stringify(
-                
-            ),
-            headers: {
-            "content-type": "application/json"
-            }
-  });
 
-    }
+
 
     
 
@@ -707,15 +697,15 @@ async function send() {
   console.log("Push Registered...");
 
   // Send Push Notification
-  console.log("Sending Push...");
-  await fetch("http://localhost:3000/subscribe", {
-    method: "POST",
-    body: JSON.stringify(subscription),
+  console.log("request data...");
+  const user = await fetch("http://localhost:3000/db/userlist/exampleUser", {
+    method: "GET",
     headers: {
       "content-type": "application/json"
     }
   });
-  console.log("Push Sent...");
+  console.log("request Sent...");
+  console.log(user);
 }
 
 function urlBase64ToUint8Array(base64String) {
