--- a/public/html/login.html
+++ b/public/html/login.html
@@ -50,7 +50,7 @@
         </form>
         <p>
             Don't have an account yet? |
-            <a href="/signup.html">Create an account</a>
+            <a href="/public/html/signup.html">Create an account</a>
         </p>
     </body>
 </html>
